# mined-lands

./: .gitignore  README.md  conda.yml  pyproject.toml  setup.cfg
amd/: __init__.py  __main__.py  amd.py  minerals.py  utils.py
amd/configs/: config.yml  defs.yml
amd/configs/defs/: defs.yml
amd/loaders/: __init__.py  granules.py  rasters.py
notebooks/: granules.ipynb
research/: emit_data_20240501.txt  script_load_mineralogy_product_v4.ipynb  script_load_mineralogy_product_v5_fit_data.ipynb
