[metadata]
name = EMIT-AMD
version = attr: amd.__version__
author =
author_email =
description =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[project.urls]
Homepage = https://github.com/...
Issues = https://github.com/.../issues

[options]
packages = find:
install_requires =

[options.extras_require]
dev =
  build
