[metadata]
name = EMIT-AMD
version = attr: amd.__version__
author =
author_email =
description =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[project.urls]
Homepage = https://github.com/emit-sds/mined-lands
Issues = https://github.com/emit-sds/mined-lands/issues

[options]
packages = find:
python_requires = >=3.10
install_requires =
  datashader
  holoviews
  hvplot
  earthaccess
  earthpy
  matplotlib
  mlky >= 4.1.0
  netCDF4
  numpy
  plotly
  nbformat
  rasterio
  ray
  rioxarray
  xarray
  h5netcdf
  s3fs
  spectral

[options.extras_require]
dev =
  build

[options.entry_points]
console_scripts =
  amd = amd.__main__:cli

[options.packages.find]
exclude =
    research*
